Projectmanager ip, logged in user and website overflow fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 body, html{
   /* background-color: #3c4652 !important;  */
+  /*  Used to hide x-axel overflow that the backgorund-image creates*/
+  overflow-x: hidden;
 }
 
 body {
